﻿
<resources>
    <string name="app_name">Memory Game</string>
    <string name="action_teste">Custom Deck</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="action_creditos">Credits</string>
    <string name="menu_singleplayer">SinglePlayer</string>
    <string name="menu_multiplayer">MultiPlayer</string>
    <string name="menu_multiplayer_on">MultiPlayer Online</string>
    <string name="menu_historico">History</string>
    <string name="menu_server">Server</string>
    <string name="menu_client">Client</string>
    <string name="numJogadas">Plays: </string>
    <string name="nivel">Level: </string>
    <string name="jogador">Player: </string>
    <string name="menu_config">Settings</string>
    <string name="title_activity_teste">Custom Deck</string>
    <string name="title_activity_menu_multi_player_on">MultiPlayer</string>
    <string name="title_activity_escolhe_tema">Pick a theme:</string>
    <string name="title_activity_escolhe_nivel">Pick a level:</string>
    <string name="title_activity_historico">History</string>
    <string name="title_activity_jogo">Play</string>
    <string name="serverdlg_title">MemoryGame Server</string>
    <string name="serverdlg_msg">Waiting for a client...</string>
    <string name="clientdlg_title">MemoryGame Client</string>
    <string name="numTentativas">Tentativas:</string>
    <string name="numAcertadas">Acertadas:</string>
    <string name="numIntrusos">Intrusos:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="confima_sair">Do you really want to exit?</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Player Name</string>
    <string name="pref_default_display_name">Player 1</string>

    <string name="pref_escolhe_idioma">Language</string>
    <string-array name="pref_lista_idiomas">
        <item value="pt">Portuguese</item>
        <item value="en">English</item>
    </string-array>
    <string-array name="pref_lista_idiomas_val">
        <item value="pt">pt</item>
        <item value="en">en</item>
    </string-array>
    <string name="title_activity_escolhe_nivel_multiplayer">Pick a level:</string>
    <string name="creditos_ok">Close</string>
    <string name="creditos_titulo">Mobile Architectures 15/16</string>
    <string name="creditos_texto">Developed by: \n Tony Mendes nº21190876 \n Ricardo Coimbra
        nº21200319
    </string>
    <string name="server_ip">Server IP</string>
    <string name="confirm">confirm</string>
    <string name="error_receive_game">Error occurred during receiving game info</string>
    <string name="game_ended">The game was finished</string>
    <string name="quit_game">Do you really wanto to quit the game?</string>
    <string name="end_game">Game Over</string>
    <string name="winner">Winner</string>
    <string name="player_2">Player 2</string>
    <string name="player_2_name">Player 2 Name</string>
    <string name="no_network">No network connection</string>
    <string name="pref_type_mode">Touch mode</string>
    <string-array name="type_mode_array">
        <item>Simple</item>
        <item>Long</item>
        <item>Double</item>
    </string-array>
    <string-array name="type_mode_value">
        <item>type_mode_simple</item>
        <item>type_mode_long</item>
        <item>type_mode_double</item>
    </string-array>
    <string name="select_file">Select file</string>
    <string name="save">Save</string>
    <string name="custom_added">Added with success</string>
    <string name="custom_add_fail">Image already saved</string>
    <string name="custom_edit_deck">Edit Deck</string>
    <string name="title_activity_edit_deck">Edit Deck</string>
    <string name="game_type">Game Type:</string>
    <string name="theme">Theme:</string>
    <string name="trys">Trys:</string>
    <string name="correct">Correct:</string>
    <string name="intruder">Intruder:</string>
    <string name="click_time">Click Time (ms)</string>
    <string name="remove_custom_card">Do you want to delete this card?</string>
</resources>
