<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="pref_nome_jogador"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLength="10"
        android:maxLines="1" />

    <ListPreference
        android:key="pref_type_mode"
        android:title = "@string/pref_type_mode"
        android:defaultValue="type_mode_simple"
        android:entries="@array/type_mode_array"
        android:entryValues="@array/type_mode_values"/>

    <EditTextPreference
        android:key="pref_click_time"
        android:title="@string/click_time"
        android:defaultValue="0"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:singleLine="true"
        android:maxLength="10"
        android:maxLines="1" />

</PreferenceScreen>
